# comic_info_editer

./: .gitignore  README.md  app copy.py  app.py  lupdate_stub_help.py  note.txt  pyproject.toml  test.py
src/: function.py  global_data_store.py  setting.py  signal_bus.py  translations.py
src/app/: app_info_tab.py  app_main.py  app_setting_tab.py  app_sys_ctl.py  classes.py  comics_list_tab.py  info_editer_tab.py  main_window.py  signal_bus.py
src/app/model/: comic_list_model.py
src/app/tabs/: app_info_tab.py  app_setting_tab.py  comics_list_tab.py  info_editor_tab.py
src/classes/: lazy_str.py
src/classes/ui/: clickable_url_label.py  numbered_item_delegate.py  smart_integer_field.py
src/core/: controller.py  data_process.py  file_read_write.py
src/function/: comicinfo_process.py
src_old/: function.py
src_old/app/: app_info_tab.py  app_main.py  comics_list_tab.py  global_data_store.py  info_editor_tab.py
translations/: en_US.qm
translations/ts/: en_US.ts  zh_TW.ts
