[project]
name = "comic-info"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pillow (>=11.3.0,<12.0.0)",
    "pyside6 (>=6.9.1,<7.0.0)",
    "natsort (>=8.4.0,<9.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "nuitka (>=2.7.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
